--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-    <title>EasyPlay28</title>
+    <title>web-midi-api-test-0</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=0">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=0">
